--- a/OnionConsumeWebAPI/Views/AATripsell/_ServiceRequestsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AATripsell/_ServiceRequestsPartialView.cshtml
@@ -1208,6 +1208,13 @@
                                                             <input type="hidden" id="hiddenSsrKey2" name="ssrKey" value="" />
                                                         </div>
                                                     }
+
+                                                    else
+                                                    {
+                                                        <select style="background:#f0f0f0;" id="" class="servc-bordr servc-bordrm1" disabled>
+                                                            <option selected="selected" value="">Meal Unavailable</option>
+                                                        </select>
+                                                    }
                                                 }
 
                                             </div>
