--- a/OnionConsumeWebAPI/Views/AATripsell/_ServiceRequestsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AATripsell/_ServiceRequestsPartialView.cshtml
@@ -152,6 +152,7 @@
 
             $dropdown.find('.dropdown-options').hide();
             $dropdown.find('.dropdown-btn i').addClass('fas fa-chevron-down');
+            updateCombinedTotal();
         });
 
 
