--- a/OnionConsumeWebAPI/Views/AATripsell/_TripsellPatialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AATripsell/_TripsellPatialView.cshtml
@@ -64,7 +64,7 @@
                         // }
 
 
-                    <div class="py-15 px-20 rounded-4 text-15  bg-blue-2 flex-center">
+                    <div class="py-15 px-70 rounded-4 text-15  bg-blue-2">
                         Change planes at 1 <span class="fw-600"> (@item.segments[i].designator.origin),</span> Connecting Time: <span class="fw-600">@formatTime</span>
                     </div>
 
