--- a/OnionConsumeWebAPI/Views/IndigoCommitBooking/booking.cshtml
+++ b/OnionConsumeWebAPI/Views/IndigoCommitBooking/booking.cshtml
@@ -728,6 +728,7 @@
                             <div class="error-message">
                                 <h1>Oops!</h1>
                                 <p>Due to a technical issue, your ticket could not be generated.</p>
+                                <p style="color:red;">@Model.ErrorDesc</p>
                                 <a class="button btncstm" asp-controller="FlightSearchIndex" asp-action="Index">
                                     Go to Home Page
                                 </a>
