--- a/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
@@ -664,13 +664,25 @@
                                                                 <td>Rs.@Model.AirlinePNR[a].TotalAmountMeal</td>
                                                             </tr>
                                                         }
-                                                        else
+
+                                                        if (@Model.AirlinePNR[a].TotalAmountMeal == 0)
                                                         {
-                                                            <tr>
-                                                                <td>Addon Meal Amount:</td>
-                                                                <td>Free</td>
-                                                            </tr>
+                                                            if (@Model.AirlinePNR[a].Mealdata.Count == 0)
+                                                            {
+                                                                <tr style="display: none;">
+                                                                    <td>Addon Meal Amount:</td>
+                                                                    <td>-</td>
+                                                                </tr>
+                                                            }
+                                                            else
+                                                            {
+                                                                <tr>
+                                                                    <td>Addon Meal Amount:</td>
+                                                                    <td>Free</td>
+                                                                </tr>
+                                                            }
                                                         }
+
                                                         if (@Model.AirlinePNR[a].TotaAmountBaggage > 0)
                                                         {
                                                             <tr>
@@ -679,27 +691,71 @@
                                                             </tr>
 
                                                         }
-                                                        else
+                                                        if (@Model.AirlinePNR[a].TotaAmountBaggage == 0)
                                                         {
-                                                            <tr>
-                                                                <td>Addon Bagg Amount:</td>
-                                                                <td>Free</td>
-                                                            </tr>
+                                                            if (@Model.AirlinePNR[a].TotaAmountBaggage == 0)
+                                                            {
+                                                                <tr style="display: none;">
+                                                                    <td>Addon Bag Amount:</td>
+                                                                    <td>-</td>
+                                                                </tr>
+                                                            }
+                                                            else
+                                                            {
+                                                                <tr>
+                                                                    <td>Addon Bag Amount:</td>
+                                                                    <td>Free</td>
+                                                                </tr>
+                                                            }
                                                         }
-                                                        if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.totalSeatAmount > 0)
-                                                        {
-                                                            <tr>
-                                                                <td>Seat Amount:</td>
-                                                                <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.seats.totalSeatAmount</td>
-                                                            </tr>
 
-                                                        }
-                                                        else
+
+
+
+                                                       
+                                                        // if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.totalSeatAmount > 0)
+                                                        // {
+                                                        //     <tr>
+                                                        //         <td>Seat Amount:</td>
+                                                        //         <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.seats.totalSeatAmount</td>
+                                                        //     </tr>
+
+                                                        // }
+                                                        // else
+                                                        // {
+                                                        //     <tr>
+                                                        //         <td>Seat Amount:</td>
+                                                        //         <td>Free</td>
+                                                        //     </tr>
+                                                        // }
+
+
+                                                        if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.total > 0)
                                                         {
                                                             <tr>
                                                                 <td>Seat Amount:</td>
-                                                                <td>Free</td>
+                                                                <td>Rs. @Model.AirlinePNR[a].breakdown.passengerTotals.seats.total</td>
                                                             </tr>
+                                                        }
+
+                                                        if (@Model.AirlinePNR[a].breakdown.passengerTotals.seats.total == 0)
+                                                        {
+                                                            if (@Model.AirlinePNR[a].Seatdata.Count == 0)
+                                                            {
+                                                                <tr style="display: none;">
+                                                                    <td>Seat Amount:</td>
+                                                                    <td>-</td>
+                                                                </tr>
+                                                            }
+                                                            else
+                                                            {
+                                                                <tr>
+                                                                    <td>Seat Amount:</td>
+                                                                    <td>Free</td>
+                                                                </tr>
+                                                            }
+
+
                                                         }
 
                                                     }
@@ -1604,6 +1660,7 @@
                             <div class="error-message">
                                 <h1>Oops!</h1>
                                 <p>Due to a technical issue, your ticket could not be generated.</p>
+                                <p style="color:red;">@Model.ErrorDesc</p>
                                 <a class="button btncstm" asp-controller="FlightSearchIndex" asp-action="Index">
                                     Go to Home Page
                                 </a>
