--- a/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundTripCommitBooking/RoundTripBookingView.cshtml
@@ -1625,6 +1625,7 @@
                                         <div class="error-message">
                                             <h1>Oops!</h1>
                                             <p>Due to a technical issue, your onward journey ticket could not be generated.</p>
+                                            <p style="color:red;">@Model.ErrorDesc</p>
                                             <a class="button btncstm" asp-controller="FlightSearchIndex" asp-action="Index">
                                                 Go to Home Page
                                             </a>
@@ -1641,6 +1642,7 @@
                                         <div class="error-message">
                                             <h1>Oops!</h1>
                                             <p>Due to a technical issue, your return journey ticket could not be generated.</p>
+                                            <p style="color:red;">@Model.ErrorDesc</p>
                                             <a class="button btncstm" asp-controller="FlightSearchIndex" asp-action="Index">
                                                 Go to Home Page
                                             </a>
